# tripleo-heat-templates

./: .ansible-lint  .gitignore  .gitreview  .stestr.conf  .testr.conf  Gemfile  Makefile  README.md  README.rst  Rakefile  all-nodes-config.yaml  all-nodes-validation.yaml  base.yaml  bindep.txt  block-storage-nfs.yaml  block-storage.yaml  bootstack-vm.yaml  bootstrap-config.yaml  capabilities-map.yaml  ceph-cluster-config.yaml  ceph-source.yaml  ceph-storage-post.yaml  ceph-storage-puppet.yaml  ceph-storage.yaml  cinder-storage-post.yaml  cinder-storage-puppet.yaml  cinder-storage.yaml  compute-config-puppet.yaml  compute-config.yaml  compute-post.yaml  compute-puppet.yaml  compute.yaml  config-download-software.yaml  config-download-structured.yaml  controller-config-puppet.yaml  controller-config.yaml  controller-post.yaml  controller-puppet.yaml  controller.yaml  debian-mirror.yaml  (+93 more)
baremetal-samples/: baremetal_deployment.yaml
ci/: README.rst  custom_ci_roles_data.yaml  custom_names_network_data.yaml  custom_names_vip_data.yaml  network_data.yaml  network_data_v6.yaml  vip_data.yaml  vip_data_v6.yaml
common/: README  common-container-config-scripts.yaml  common-container-setup-tasks.yaml  container-puppet.py  container-puppet.sh  container_startup_configs_tasks.yaml  deploy-steps-playbook.yaml  deploy-steps-playbooks-common.yaml  deploy-steps-tasks-step-0.j2.yaml  deploy-steps-tasks-step-0.yaml  deploy-steps-tasks-step-1.yaml  deploy-steps-tasks.yaml  deploy-steps.j2  generate-config-tasks.yaml  hiera-steps-tasks.yaml  host-container-puppet-tasks.yaml  major_upgrade_steps.j2.yaml  post-upgrade.j2.yaml  post.j2.yaml  services.yaml
container_config_scripts/: cinder_ffu_db_sync.sh  glance_ffu_db_sync.sh  keystone_ffu_db_sync.sh  pyshim.sh  (+20 more)
(+3144 files in other folders)
