[metadata]
name = tripleo-heat-templates
summary = Heat templates for deploying OpenStack with OpenStack.
description-file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
license = Apache License (2.0)
home-page = https://opendev.org/openstack/tripleo-heat-templates
classifier =
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Other
    Environment :: Console
